Добавлена валидация графа